--- a/front/src/sass/main.scss
+++ b/front/src/sass/main.scss
@@ -1,3 +1,5 @@
 @import "./utils/variables.scss";
+@import "./utils/mixins.scss";
+@import "./utils/buttons.scss";
 @import "./base/root.scss";
 @import "./pages/loginRegister.scss";
