--- a/front/src/sass/pages/_loginRegister.scss
+++ b/front/src/sass/pages/_loginRegister.scss
@@ -1,4 +1,4 @@
-.login-block {
+.login-register-block {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +24,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    justify-content: center;
+    justify-content: space-evenly;
     width: 100%;
     height: 60%;
     background: $color-tertiary;
@@ -38,28 +38,39 @@
         flex-direction: row;
         align-items: center;
         justify-content: flex-start;
+        width: 100%;
         margin-bottom: 20px;
         border-bottom: 1px solid $color-quaternary;
-        :focus {
+
+        &:hover {
           border-bottom: 1px solid $color-primary;
         }
+
+        span {
+          margin: 8px 12px 0 6px;
+        }
+
         input {
-          width: 80%;
+          width: 70%;
           height: auto;
           align-self: center;
           border: none;
-          background: $color-tertiary;
           color: $color-quaternary;
           font-size: 20px;
           margin: 10px 0 4px 0;
           &:focus {
             outline: none;
+            border-bottom: none;
             &::placeholder {
               color: $color-primary;
             }
           }
         }
-      }
+      }  
+    }
+    &__button {
+      align-self: center;
+      @include loginRegisterButton;
     }
   }
 }
