--- a/front/src/sass/pages/_loginRegister.scss
+++ b/front/src/sass/pages/_loginRegister.scss
@@ -33,6 +33,8 @@
       flex-direction: column;
       align-items: flex-start;
       justify-content: center;
+      width: 100%;
+      height: 100%;
       &__input {
         display: flex;
         flex-direction: row;
