--- a/front/src/sass/utils/_buttons.scss
+++ b/front/src/sass/utils/_buttons.scss
@@ -7,4 +7,15 @@
   background-color: $color-primary;
   border: none;
   line-height: 50px;
+  margin-top: 30px;
+
+  &:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+  }
+
+  &:active {
+    transform: scale(0.9);
+  }
 }
