--- a/front/src/sass/pages/_loginRegister.scss
+++ b/front/src/sass/pages/_loginRegister.scss
@@ -43,6 +43,7 @@
         width: 100%;
         margin-bottom: 20px;
         border-bottom: 1px solid $color-quaternary;
+        position: relative;
 
         &:hover {
           border-bottom: 1px solid $color-primary;
@@ -67,7 +68,38 @@
               color: $color-primary;
             }
           }
+
+          &:focus + label, .focus {
+            top: +34px;
+            color: $color-primary;
+            font-size: 14px;
+            background-color: white;
+          }
+
         }
+
+        &__label {
+          position: absolute;
+          left: 10px;
+          top: 14px;
+          transition: all 0.2s;
+          padding: 0 2px;
+          margin-left: 30px;
+          z-index: 1;
+          color: $color-quaternary;
+
+          &:before {
+            content: '';
+            height: 5px;
+            position: absolute;
+            left: 0;
+            top: 10px;
+            width: 100%;
+            z-index: -1;
+          }
+
+        }
+
       }  
     }
     &__button {
