[FIX] the animation on the label, add an onChange directly on the input in the components

--- a/front/src/sass/pages/_loginRegister.scss
+++ b/front/src/sass/pages/_loginRegister.scss
@@ -97,6 +97,14 @@
             z-index: -1;
           }
         }
+
+        .focus {
+          top: +34px;
+          color: $color-quaternary;
+          font-size: 14px;
+          background-color: white;
+        }
+
       }  
     }
     &__button {
