--- a/front/src/sass/pages/_loginRegister.scss
+++ b/front/src/sass/pages/_loginRegister.scss
@@ -6,6 +6,27 @@
   width: 85%;
   height: 90%;
   background: $color-tertiary;
+
+  @media screen and (min-width: 426px) and (max-width: 768px) {
+    width: 65%;
+    height: 90%;
+  }
+
+  @media screen and (min-width: 769px) and (max-width: 1025px) {
+    width: 60%;
+    height: 90%;
+  }
+
+  @media screen and (min-width: 1026px) {
+    width: 45%;
+    height: 90%;
+  }
+
+  /*@media screen and (max-width: 426px) and (max-width: 848px) and (orientation: landscape) {
+    width: 90%;
+    height: 80%;
+  }*/
+
   &__top_container {
     display: flex;
     flex-direction: column;
@@ -18,7 +39,28 @@
       width: 100%;
       height: 250px;
       align-self: center;
+
+      @media screen and (min-width: 426px) and (max-width: 768px) {
+        width: 90%;
+        height: 200px;
+      }
+
+      @media screen and (min-width: 1026px) {
+        width: 80%;
+        height: 200px;
+      }
+
+      /*@media screen and (max-width: 426px) and (max-width: 848px) and (orientation: landscape) {
+        width: 80%;
+        height: 150px;
+      }*/
+
     }
+
+    h1 {
+      padding-bottom: 14px;
+    }
+
   }
   &__form_container {
     display: flex;
@@ -106,6 +148,13 @@
         }
 
       }  
+
+      &__error {
+        display: flex;
+        align-self: center;
+        color: $color-error;
+      }
+
     }
     &__button {
       align-self: center;
